--- a/proyectoparcial2/index.html
+++ b/proyectoparcial2/index.html
@@ -4,46 +4,46 @@
 
   <title>Panini Manga - Panini Comics, Panini Manga</title>
 
-	<link rel="shortcut icon" href="http://cdn62.paninicloud.com/store/media/favicon/default/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="store/media/favicon/default/favicon.ico" type="image/x-icon">
 
-	<link rel="stylesheet" type="text/css" href="http://cdn62.paninicloud.com/store/skin/frontend/base/default/css/amasty/amlabel/amlabel.css" media="all">
-	<link rel="stylesheet" type="text/css" href="http://cdn62.paninicloud.com/store/skin/frontend/base/default/css/bubble/elasticsearch.css" media="all">
-	<link rel="stylesheet" type="text/css" href="http://cdn62.paninicloud.com/store/skin/frontend/base/default/pickuppoint/css/kiosks-select.css" media="all">
-	<link rel="stylesheet" type="text/css" href="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/css/Core.css" media="all">
-	<link rel="stylesheet" type="text/css" href="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/css/CustomProductStyles.css" media="all">
+	<link rel="stylesheet" type="text/css" href="store/skin/frontend/base/default/css/amasty/amlabel/amlabel.css" media="all">
+	<link rel="stylesheet" type="text/css" href="store/skin/frontend/base/default/css/bubble/elasticsearch.css" media="all">
+	<link rel="stylesheet" type="text/css" href="store/skin/frontend/base/default/pickuppoint/css/kiosks-select.css" media="all">
+	<link rel="stylesheet" type="text/css" href="store/skin/frontend/ThemeRoller/default/css/Core.css" media="all">
+	<link rel="stylesheet" type="text/css" href="store/skin/frontend/ThemeRoller/default/css/CustomProductStyles.css" media="all">
 	
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/prototype/prototype.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/lib/ccard.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/prototype/validation.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/scriptaculous/builder.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/scriptaculous/effects.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/scriptaculous/dragdrop.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/scriptaculous/controls.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/scriptaculous/slider.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/varien/js.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/varien/form.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/varien/menu.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/mage/translate.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/mage/cookies.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/amasty/amlabel/amlabel_observer.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/js/pickuppoint/pickuppoint.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/js/jQuery.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/js/Modernizr.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/js/Respond.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/js/Bootstrap.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/js/ThemeRoller.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/js/Cookie.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/js/checkascii.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/js/reclami.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/js/figurine-mancanti.js"></script>
-	<script type="text/javascript" src="http://cdn62.paninicloud.com/store/skin/frontend/ThemeRoller/default/js/google-tag-manager.js"></script>
+	<script type="text/javascript" src="store/js/prototype/prototype.js"></script>
+	<script type="text/javascript" src="store/js/lib/ccard.js"></script>
+	<script type="text/javascript" src="store/js/prototype/validation.js"></script>
+	<script type="text/javascript" src="store/js/scriptaculous/builder.js"></script>
+	<script type="text/javascript" src="store/js/scriptaculous/effects.js"></script>
+	<script type="text/javascript" src="store/js/scriptaculous/dragdrop.js"></script>
+	<script type="text/javascript" src="store/js/scriptaculous/controls.js"></script>
+	<script type="text/javascript" src="store/js/scriptaculous/slider.js"></script>
+	<script type="text/javascript" src="store/js/varien/js.js"></script>
+	<script type="text/javascript" src="store/js/varien/form.js"></script>
+	<script type="text/javascript" src="store/js/varien/menu.js"></script>
+	<script type="text/javascript" src="store/js/mage/translate.js"></script>
+	<script type="text/javascript" src="store/js/mage/cookies.js"></script>
+	<script type="text/javascript" src="store/js/amasty/amlabel/amlabel_observer.js"></script>
+	<script type="text/javascript" src="store/js/pickuppoint/pickuppoint.js"></script>
+	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/jQuery.js"></script>
+	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/Modernizr.js"></script>
+	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/Respond.js"></script>
+	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/Bootstrap.js"></script>
+	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/ThemeRoller.js"></script>
+	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/Cookie.js"></script>
+	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/checkascii.js"></script>
+	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/reclami.js"></script>
+	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/figurine-mancanti.js"></script>
+	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/google-tag-manager.js"></script>
 
-	<link rel="stylesheet" href="/typo3conf/ext/themeroller/Resources/Public/Stylesheets/Extended/Colors/red.css"><link rel="stylesheet" href="/typo3conf/ext/themeroller/Resources/Public/Stylesheets/Extended/Backgrounds/comics.css">
+	<link rel="stylesheet" type="text/css" href="/typo3conf/ext/themeroller/Resources/Public/Stylesheets/Extended/Colors/red.css"><link rel="stylesheet" href="typo3conf/ext/themeroller/Resources/Public/Stylesheets/Extended/Backgrounds/comics.css">
 
 </head>
 <body>
  
- 	<header style="background-image: url(/typo3conf/ext/themeroller/Resources/Public/Images/Flags/header-mex.jpg);"> 
+ 	<header style="background-image: url(typo3conf/ext/themeroller/Resources/Public/Images/Flags/header-mex.jpg);"> 
 	<div class="container hidden-xs"> 
 		<div class="country-selector-wrapper hidden"> 
 			<div class="country-selector"> 
@@ -81,7 +81,7 @@
 			    </div>
 					 
 					<div class="col-xs-12 line-left"> 
-						<div class="special-menu line-top"><span class="first"> <a href="http://comics.panini.com.mx/" title="Home" class="first">Home</a> </span> <span> <a href="http://comics.panini.com.mx/user.html" title="registration">Registro</a> </span> <span class="last"> <a href="http://crm.paninigroup.com/crm/commx/es-mx/stage" title="Contact us" class="last" target="_blank">Contactar</a> </span></div>
+						<div class="special-menu line-top"><span class="first"> <a href="http://comics.panini.com.mx/" title="Home" class="first">Home</a> </span> <span> <a href="http://comics.panini.com.mx/user.html" title="registration">Registro</a> </span> <span class="last"> <a href="http://crm.paninigroup.com/crm/commx/es-mx/stage" title="Contact us" class="last" target="_blank">Contactar</a></span></div>
 						 </div>
 					 </div>
 				 </div>
@@ -101,7 +101,7 @@
 					<div class="row"> 
 						<div class="col-xs-9 line-right"> 
 							<div class="row"> 
-								<div class="col-xs-12"> <a class="btn btn-header btn-block" href="http://comics.panini.com.mx/busqueda.html"> <i  class="fa fa-search fa-fw"> </i> <span>buscar</span> </a> 
+								<div class="col-xs-12"> <a class="btn btn-header btn-block" href="http://comics.panini.com.mx/busqueda.html"><i class="fa fa-search fa-fw"> </i><span>buscar</span> </a> 
 
 								</div>
 						    </div>
@@ -111,7 +111,8 @@
 								</div>
 							</div>
 						 <div class="col-xs-3"> 
-							<div id="mini-cart" class="squared"> <a class="btn btn-success" href="/store/pub_mex_es/checkout/cart"> <i class="    fa fa-shopping-cart fa-2x"></i> <span id="mini-cart-qty" class="badge">0</span> </a> </div>
+							<div id="mini-cart" class="squared"> <a class="btn btn-success" href="/store/pub_mex_es/checkout/cart"> <i class="   
+								fa fa-shopping-cart fa-2x"></i> <span id="mini-cart-qty" class="badge">0</span> </a> </div>
 							    <img class="passport-chip" alt="Panini Passport" src="csm_panini_group_chips_cb4e68e10b.png" width="90" height="34"> 
 						    </div>
 						 </div>
@@ -119,6 +120,33 @@
 			 </div>
 		 </div>
 	 </header>
+
+	 <!-----Fin de Header--->
+
+	 <nav class="navbar navbar-website" role="navigation"> 
+	<div class="container"> 
+		<div class="navbar-header"> <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapse-navigation"> <span class="sr-only">Toggle navigation</span> <i class="fa-dot-circle-o fa"></i> </button> <a class="navbar-brand visible-xs" href="http://comics.panini.com.mx/"> <img src="http://comics.panini.com.mx/typo3conf/ext/themeroller/Resources/Public/Images/Logos/Panini.png" class="Panini"> </a> </div>
+		 
+		<div class="collapse navbar-collapse" id="collapse-navigation"> 
+			<ul class="nav navbar-nav"> 
+				<li class="firstItem"> <a tabindex="100" href="http://comics.panini.com.mx/el-grupo-panini.html" class="firstItem" target="">El Grupo Panini</a> </li> 
+				<li class="dropdown"> <a tabindex="102" href="http://comics.panini.com.mx/tienda-online/catalogo-completo.html" class="dropdown-toggle" data-toggle="dropdown" target="">Tienda Online</a> 
+			<ul class="dropdown-menu" role="menu"> 
+				<li class="first"> <a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/magazines.html" class="first" target="">Catálogo completo</a></li> 
+				<li class=""> <a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/magazines/comics.html" class="" target="">Catálogo Panini Comics</a></li> 
+				<li class=""><a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/magazines/manga.html" class="" target="">Catálogo Panini Manga</a></li> 
+				<li class=""><a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/books.html" class="" target="">Catálogo Panini books</a> 
+				</li><li class=""><a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/partworks.html" class="" target="">Fascículos</a> 
+				</li><li class=""> <a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/catalogsearch/advanced/" class="" target="">Búsqueda avanzada</a></li> 
+				<li class="last"> <a tabindex="100" href="https://tiendapanini.com.mx/index.asp" class="last" target="">Suscripciones</a></li></ul></li> 
+				<li class=""> <a tabindex="100" href="http://comics.panini.com.mx/atencion-al-cliente.html" class="" target="">Atención al cliente</a></li> 
+				<li class=""> <a tabindex="100" href="http://comics.panini.com.mx/politicas-de-envio.html" class="" target="">Políticas de envío</a></li> 
+				<li class="lastItem"> <a tabindex="100" href="https://tiendapanini.com.mx/index.asp" class="lastItem" target="_blank">Suscripciones</a></li> 
+				<li class="visible-xs"> <a href="http://comics.panini.com.mx/user.html"> <i class="fa fa-sign-in"></i> <span> Iniciar sesión </span> </a></li> 
+				<li class="visible-xs"> <a href="http://comics.panini.com.mx/store/pub_mex_es/checkout/cart"> <i class="fa fa-shopping-cart"></i> <span> Carro de compras </span> </a></li> </ul> </div>
+		 </div>
+	</nav>
+	
 
 
  	<script src="js/bootstrap.js"></script>
