--- a/proyectoparcial2/index.html
+++ b/proyectoparcial2/index.html
@@ -256,6 +256,22 @@
 
                     </div>
              </div>
+
+             <div class="col-md-6">
+                       <div class="actions text-center">
+                         <div class="btn-group-vertical">
+                          <button type="button" title="Añadir al carro" class="button btn btn-cart" onclick="setLocation('http://comics.panini.com.mx/store/pub_mex_es/checkout/cart/add/uenc/aHR0cDovL2NvbWljcy5wYW5pbmkuY29tLm14L3N0b3JlL3B1Yl9tZXhfZXMvbWFnYXppbmVzL21hbmdhLmh0bWw,/product/73999/form_key/gxIw0OIgZVDNmhIq/')"><i class="fa fa-2x fa-shopping-cart"></i><span> Añadir al carro</span>
+                           </button>
+                          <button title="Añadir a la lista de deseos" onclick="setLocation('http://comics.panini.com.mx/store/pub_mex_es/wishlist/index/add/product/73999/form_key/gxIw0OIgZVDNmhIq/')" class="btn btn-wishlist link-wishlist"><i class="fa fa-2x fa-gift"></i> <span>Añadir a la lista de deseos</span></button>
+                          </div>
+
+                                       
+                                                                                                                              
+                        </div>
+                       </div>
+                      </div>
+                    </div>
+                  </div>
 	
 
  	<script src="js/bootstrap.js"></script>
