--- a/proyectoparcial2/index.html
+++ b/proyectoparcial2/index.html
@@ -38,11 +38,11 @@
 	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/figurine-mancanti.js"></script>
 	<script type="text/javascript" src="store/skin/frontend/ThemeRoller/default/js/google-tag-manager.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="typo3conf/ext/themeroller/Resources/Public/Stylesheets/Extended/Colors/red.css">
-	<link rel="stylesheet" type="text/css" href="typo3conf/ext/themeroller/Resources/Public/Stylesheets/Extended/Backgrounds/comics.css">
+	
 
 </head>
 <body>
+
  
  	<header style="background-image: url(typo3conf/ext/themeroller/Resources/Public/Images/Flags/header-mex.jpg);"> 
 	<div class="container hidden-xs"> 
@@ -131,7 +131,7 @@
 				<li class="firstItem"> <a tabindex="100" href="http://comics.panini.com.mx/el-grupo-panini.html" class="firstItem" target="">El Grupo Panini</a> </li> 
 				<li class="dropdown"> <a tabindex="102" href="http://comics.panini.com.mx/tienda-online/catalogo-completo.html" class="dropdown-toggle" data-toggle="dropdown" target="">Tienda Online</a> 
 			<ul class="dropdown-menu" role="menu"> 
-				<li class="first"> <a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/magazines.html" class="first" target="">Catálogo completo</a></li> 
+				<li class="first"><a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/magazines.html" class="first" target="">Catálogo completo</a></li> 
 				<li class=""> <a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/magazines/comics.html" class="" target="">Catálogo Panini Comics</a></li> 
 				<li class=""><a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/magazines/manga.html" class="" target="">Catálogo Panini Manga</a></li> 
 				<li class=""><a tabindex="100" href="http://comics.panini.com.mx/store/pub_mex_es/books.html" class="" target="">Catálogo Panini books</a></li>
@@ -263,6 +263,80 @@
                           <button type="button" title="Añadir al carro" class="button btn btn-cart" onclick="setLocation('http://comics.panini.com.mx/store/pub_mex_es/checkout/cart/add/uenc/aHR0cDovL2NvbWljcy5wYW5pbmkuY29tLm14L3N0b3JlL3B1Yl9tZXhfZXMvbWFnYXppbmVzL21hbmdhLmh0bWw,/product/73999/form_key/gxIw0OIgZVDNmhIq/')"><i class="fa fa-2x fa-shopping-cart"></i><span> Añadir al carro</span>
                            </button>
                           <button title="Añadir a la lista de deseos" onclick="setLocation('http://comics.panini.com.mx/store/pub_mex_es/wishlist/index/add/product/73999/form_key/gxIw0OIgZVDNmhIq/')" class="btn btn-wishlist link-wishlist"><i class="fa fa-2x fa-gift"></i> <span>Añadir a la lista de deseos</span></button>
+                          </div>                                                                                                    
+                        </div>
+                       </div>
+                      </div>
+                    </div>
+                  </div>
+
+             <div class="list-group-item row item even">
+              <div class="col-md-3"><a href="http://comics.panini.com.mx/store/pub_mex_es/qcdec002tpn-mx-deadly-class-deadly-class-2-los-ni-os-de-agujero-negro.html" title="DEADLY CLASS N.2: LOS NIÑOS DE AGUJERO NEGRO" class="product-image"><img class="img-thumbnail img-responsive" src="store2/media/catalog/200x/QCDEC002TPN_0.jpeg" alt="DEADLY CLASS N.2: LOS NIÑOS DE AGUJERO NEGRO"></a>
+               </div>
+               <div class="col-md-9">
+                <h3 class="product-name"><a href="http://comics.panini.com.mx/store/pub_mex_es/qcdec002tpn-mx-deadly-class-deadly-class-2-los-ni-os-de-agujero-negro.html" title="DEADLY CLASS N.2: LOS NIÑOS DE AGUJERO NEGRO">DEADLY CLASS N.2: LOS NIÑOS DE AGUJERO NEGRO</a><small class="subtitle lightText"> DEADLY CLASS N.2: LOS NIÑOS DE AGUJERO NEGRO</small>
+                </h3>
+                 <div class="desc std">
+                   <p>DEADLY CLASS N.2: LOS NIÑOS DE AGUJERO NEGRO</p><a href="http://comics.panini.com.mx/store/pub_mex_es/qcdec002tpn-mx-deadly-class-deadly-class-2-los-ni-os-de-agujero-negro.html" title="DEADLY CLASS N.2: LOS NIÑOS DE AGUJERO NEGRO" class="btn btn-link link-learn"><i class="fa fa-info-circle"></i><span>Saber más</span></a>
+                 </div>
+                  <div class="row">
+                   <div class="col-md-6">
+                    <div class="pnn-attributes">
+                     <h5><small>Año: </small>2015</h5>
+                      <h5><small>Idioma:</small> Español (MEX)</h5>
+                    </div>
+          <div class="product-desc">
+           <div class="ratings">&nbsp;</div>
+             <div class="price" id="amlabel-product-price-74151" style="display:none"></div>
+               <div class="price-box">
+                <h2 class="regular-price" id="product-price-74151"><span class="price">$&nbsp;129.00</span></h2>       
+               </div>
+          </div>
+         </div>
+           <div class="col-md-6">
+             <div class="actions text-center">
+                <div class="btn-group-vertical">
+                 <button type="button" title="Añadir al carro" class="button btn btn-cart" onclick="setLocation('http://comics.panini.com.mx/store/pub_mex_es/checkout/cart/add/uenc/aHR0cDovL2NvbWljcy5wYW5pbmkuY29tLm14L3N0b3JlL3B1Yl9tZXhfZXMvbWFnYXppbmVzL21hbmdhLmh0bWw,/product/74151/form_key/gxIw0OIgZVDNmhIq/')"><i class="fa fa-2x fa-shopping-cart"></i><span> Añadir al carro</span></button>
+                 <button title="Añadir a la lista de deseos" onclick="setLocation('http://comics.panini.com.mx/store/pub_mex_es/wishlist/index/add/product/74151/form_key/gxIw0OIgZVDNmhIq/')" class="btn btn-wishlist link-wishlist"><i class="fa fa-2x fa-gift"></i> <span>Añadir a la lista de deseos</span></button>
+                 </div>
+              </div>
+             </div>
+          </div>
+         </div>
+        </div>
+         <div class="list-group-item row item odd">
+           <div class="col-md-3">
+             <a href="http://comics.panini.com.mx/store/pub_mex_es/qmcir026-mx-circulo-de-reencarnacion-rinne-circulo-de-reencarnacion-n.html" title="CIRCULO DE REENCARNACION N.26" class="product-image"><img class="img-thumbnail img-responsive" src="store2/media/catalog/200x/QMCIR026_0.jpeg" alt="CIRCULO DE REENCARNAION N.26"></a>
+            </div>
+              <div class="col-md-9">
+                 <h3 class="product-name"><a href="http://comics.panini.com.mx/store/pub_mex_es/qmcir026-mx-circulo-de-reencarnacion-rinne-circulo-de-reencarnacion-n.html" title="CIRCULO DE REENCARNACION N.26">CIRCULO DE REENCARNACION N.26</a><small class="subtitle lightText">CIRCULO DE REENCARNACION N.26</small></h3>
+                <div class="desc std">
+                  <p>CIRCULO DE REENCARNAION N.26</p><a href="http://comics.panini.com.mx/store/pub_mex_es/qmcir026-mx-circulo-de-reencarnacion-rinne-circulo-de-reencarnacion-n.html" title="CIRCULO DE REENCARNACION N.26" class="btn btn-link link-learn"><i class="fa fa-info-circle"></i><span>Saber más</span></a>
+                </div>
+
+                 <div class="row">
+                    <div class="col-md-6">
+                       <div class="pnn-attributes">
+                         <h5><small>Año: </small>2019</h5>
+                           <h5><small>Idioma:</small>Español (MEX)</h5>
+                       </div>
+	                   <div class="product-desc">
+	                     <div class="ratings">&nbsp;</div>
+	                      <div class="price" id="amlabel-product-price-73999" style="display:none"></div>
+	                        <div class="price-box">
+	                         <h2 class="regular-price" id="product-price-73999"><span class="price">$&nbsp;89.00</span></h2>
+	                        
+	                        </div>
+
+
+                        </div>
+                    </div>
+                     <div class="col-md-6">
+                       <div class="actions text-center">
+                         <div class="btn-group-vertical">
+                          <button type="button" title="Añadir al carro" class="button btn btn-cart" onclick="setLocation('http://comics.panini.com.mx/store/pub_mex_es/checkout/cart/add/uenc/aHR0cDovL2NvbWljcy5wYW5pbmkuY29tLm14L3N0b3JlL3B1Yl9tZXhfZXMvbWFnYXppbmVzL21hbmdhLmh0bWw,/product/73999/form_key/gxIw0OIgZVDNmhIq/')"><i class="fa fa-2x fa-shopping-cart"></i><span> Añadir al carro</span>
+                           </button>
+                          <button title="Añadir a la lista de deseos" onclick="setLocation('http://comics.panini.com.mx/store/pub_mex_es/wishlist/index/add/product/73999/form_key/gxIw0OIgZVDNmhIq/')" class="btn btn-wishlist link-wishlist"><i class="fa fa-2x fa-gift"></i> <span>Añadir a la lista de deseos</span></button>
                           </div>
 
                                        
@@ -271,7 +345,7 @@
                        </div>
                       </div>
                     </div>
-                  </div>
+                  </div>     
 	
 
  	<script src="js/bootstrap.js"></script>
