--- a/proyectoparcial2/index.html
+++ b/proyectoparcial2/index.html
@@ -713,7 +713,7 @@
 	<div id="pnn-footer">
     <div id="9e35e4e1-62a1-11e5-aba2-00163e346266" class="footer" data-type="pnnss" data-locale="es_MX" data-client="comics.panini.com.mx">
         <div class="disclaimer">
-            PANINI S.P.A. - SOCIO ÚNICO - Viale Emilio Po, 380 - 41126 Modena Italia - Tel +39 059 382450 - Fax +39 059 827431 - Capital social €100.000.000,00 - CIF 02796411201 - VAT IT02796411201 - Registrado en la Cámara de Comercio con nº 411936. Dirección y coordinación ex 2497 c.c.: I.D. 4 ITALIA S.r.l. - Registro Mercantil de BOLONIA, con CIF 03422531206
+            PANINI S.P.A. - SOCIO ÚNICO - Viale Emilio Po, 380 - 41126 Modena Italia - Tel +39 059 382450 - Fax +39 059 827431 - Capital social €100.000.000,00 - CIF 02796411201 - VAT IT02796411201 - Registrado en la Cámara de Comercio con nº 411936. Dirección y coordinación ex 2497 c.c.: I.D. 4 ITALIA S.r.l. - Registro Mercantil de BOLONIA, con CIF 03422531206 "Pero al Final lo realizo Kevin Yahir Gomez Corvera y Jose Fernando Loaiza Ramirez :vv"
         </div> 
                  
     </div>
