--- a/proyectoparcial2/index.html
+++ b/proyectoparcial2/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+	<meta charset="utf-8">
   <title>Panini Manga - Panini Comics, Panini Manga</title>
 
   <!---Importaciones uwu--->
 
 	<link rel="shortcut icon" href="store2/media/favicon/default/favicon.ico" type="image/x-icon">
-
 	<link rel="stylesheet" type="text/css" href="store/skin/frontend/base/default/css/amasty/amlabel/amlabel.css" media="all">
 	<link rel="stylesheet" type="text/css" href="store/skin/frontend/base/default/css/bubble/elasticsearch.css" media="all">
 	<link rel="stylesheet" type="text/css" href="store/skin/frontend/base/default/pickuppoint/css/kiosks-select.css" media="all">
 	<link rel="stylesheet" type="text/css" href="store/skin/frontend/ThemeRoller/default/css/Core.css" media="all">
 	<link rel="stylesheet" type="text/css" href="store/skin/frontend/ThemeRoller/default/css/CustomProductStyles.css" media="all">
+	<link rel="stylesheet"  href="css/bootstrap.css">
 	
 	<script type="text/javascript" src="store2/js/prototype/prototype.js"></script>
 	<script type="text/javascript" src="store2/js/lib/ccard.js"></script>
@@ -120,6 +120,18 @@
 				    </div>
 			 </div>
 		 </div>
+
+		 <div class="container">
+		  		<div class="row well">
+		  			<div class="col-md-6 col-md-offset-3">
+		  				<form action="guardar.php" method="POST">
+		  					<div class="form-group text-center">
+		  						<input type="submit" class="btn btn-primary" value="Registrar">
+		  					</div>
+		  				</form>
+		  			</div>
+		  		</div>
+		  	</div>
 	 </header>
 
 	 <!-----Fin de Header--->
